Add compileSdk support for catalog reference with .get().toInt()
Fixes: 476894940
Test: VersionCatalogReferenceResolutionTest
Change-Id: I5d8818b54b31f90a94ae97beed6104dd60eb3f3f

GitOrigin-RevId: 9a50f30746ce4daeb124a7c36812d39a8e8eca47
(cherry picked from commit 3c141d6ee236105147850e3361a0884d77a58e2c)